# classroom-airdist

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
artifacts/: layout.csv
backend/app/: main.py  schemas.py  settings.py
backend/app/routes/: catalogs.py  predict.py  report.py
backend/engine/: compliance.py  edt_adpi.py  grid.py  jets.py  optimizer.py  uncertainty.py
backend/reports/: figures.py
backend/tests/unit/: test_edt_adpi.py  test_vrp.py
classroom_airdist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: constants.yaml
data/catalogs/v0/: example_4way_plaque.json  example_square_cone.json
examples/: request_classroom_30x25.json
web/: README.md
web/static/: app.js  styles.css
web/templates/: index.html
