
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classroom-airdist"
version = "0.1.1"
description = "Mixing-mode air distribution design assistant for K-12 classrooms"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Team"}]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "numpy>=1.26.0",
  "matplotlib>=3.8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["data*", "web*", "docs*", "examples*"]
